Fix scrollbars being caused by 100vw

--- a/src/components/_global/SignInSection.css
+++ b/src/components/_global/SignInSection.css
@@ -1,7 +1,7 @@
 #sign-in-section {
   position: relative;
   top: 10px;
-  width: 100vw; 
+  width: 100%; 
   height: 12px; 
   display: flex; 
   justify-content: flex-end;
