--- a/src/components/end/EndScreen.css
+++ b/src/components/end/EndScreen.css
@@ -1,6 +1,6 @@
 #end-screen {
   display: flex;
-  width: 100vw;
+  width: 100%;
   justify-content: center;
   align-items: center;
   flex-direction: column;
